add_library(304 INTERFACE)
target_sources(304 INTERFACE CO_GFC.c CO_SRDO.c)
target_include_directories(304 INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(304 INTERFACE 301)

set(304_PUBLIC_HEADERS "CO_SRDO.h" "CO_GFC.h")
set_target_properties(304 PROPERTIES PUBLIC_HEADER "${304_PUBLIC_HEADERS}")
install(TARGETS 304 DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/304)
